--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>future-hire-lab</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="TechPrep Generated Project" />
+    <meta name="author" content="TechPrep" />
 
     <meta property="og:title" content="future-hire-lab" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="TechPrep Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://TechPrep.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@TechPrep_dev" />
+    <meta name="twitter:image" content="https://TechPrep.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
